Configuration for TS Client

--- a/src/TSMapEditor/Config/FileManagerConfig.ini
+++ b/src/TSMapEditor/Config/FileManagerConfig.ini
@@ -12,18 +12,12 @@
 ; The editor WILL start even if none of them are found.
 [PrimaryMIXFiles]
 0=Cache.mix
-1=Local.mix
-2=Conquer.mix
+1=Conquer.mix
+2=$TSECACHE
+3=$EXPAND
 
 ; Specifies secondary MIX files.
 ; The editor will attempt to load these, but will start even if these are missing.
 [SecondaryMIXFiles]
-0=ECache00.mix
-1=ECache01.mix
-2=ECache02.mix
-3=ECache03.mix
-4=ECache04.mix
-5=ECache05.mix
-6=RampaCache.mix
-
+0=marble.mix
 
