--- a/src/TSMapEditor/Config/Theaters.ini
+++ b/src/TSMapEditor/Config/Theaters.ini
@@ -6,7 +6,7 @@
 
 [Theaters]
 0=Temperate
-1=Desert
+1=Snow
 
 [Temperate]
 ConfigINIPath=INI/Temperat.ini
@@ -15,12 +15,12 @@ TerrainPaletteName=isotem.pal
 UnitPaletteName=unittem.pal
 ;TiberiumPaletteName=
 FileExtension=.tem
-NewTheaterBuildingLetter=A
-
-[Desert]
-ConfigINIPath=INI/Desert.ini
-ContentMIXName=IsoDes.mix
-TerrainPaletteName=isodes.pal
-UnitPaletteName=unitdes.pal
-FileExtension=.des
 NewTheaterBuildingLetter=T
+
+[Snow]
+ConfigINIPath=INI/Snow.ini
+ContentMIXName=IsoSnow.mix
+TerrainPaletteName=isosno.pal
+UnitPaletteName=unitsno.pal
+FileExtension=.sno
+NewTheaterBuildingLetter=A
