--- a/src/TSMapEditor/Config/FileManagerConfig.ini
+++ b/src/TSMapEditor/Config/FileManagerConfig.ini
@@ -1,9 +1,9 @@
-﻿; C&C World-Altering Editor (WAE)
+; C&C World-Altering Editor (WAE)
 ; https://github.com/Rampastring/WorldAlteringEditor
 
 ; Specifies directories that the file manager will load MIX files from.
 [SearchDirectories]
-0=MIX
+0=.
 1=Map Editor
 
 ; Specifies primary MIX files. The editor will refuse to start if one of these is not found.
@@ -11,19 +11,29 @@
 ; The valid options are $TSECACHE, $RA2ECACHE, $TSELOCAL, $RA2ELOCAL, $EXPAND, $EXPANDMD.
 ; The editor WILL start even if none of them are found.
 [PrimaryMIXFiles]
-0=Cache.mix
-1=Local.mix
-2=Conquer.mix
+0=langmd.mix
+1=language.mix
+2=$EXPANDMD
+3=ra2md.mix
+4=ra2.mix
+5=cachemd.mix
+6=cache.mix
+7=localmd.mix
+8=local.mix
+9=$RA2ECACHE
+10=$RA2ELOCAL
+11=conqmd.mix
+12=genermd.mix
+13=generic.mix
+14=isogenmd.mix
+15=isogen.mix
+16=conquer.mix
 
 ; Specifies secondary MIX files.
 ; The editor will attempt to load these, but will start even if these are missing.
 [SecondaryMIXFiles]
-0=ECache00.mix
-1=ECache01.mix
-2=ECache02.mix
-3=ECache03.mix
-4=ECache04.mix
-5=ECache05.mix
-6=RampaCache.mix
+0=marble.mix           ; borrowed from Final Alert 2
 
-
+[StringTables]
+0=ra2.csf
+1=ra2md.csf
