--- a/src/TSMapEditor/Config/ScriptActions.ini
+++ b/src/TSMapEditor/Config/ScriptActions.ini
@@ -25,6 +25,8 @@ Option6=6,Factories
 Option7=7,Base Defenses
 Option8=8,Base Threats
 Option9=9,Power Plants
+Option10=10,Occupiables
+Option11=11,Tech Buildings
 
 [AttackWaypoint]
 Name=Attack Waypoint
@@ -336,3 +338,110 @@ Option0=0,None
 Option1=1,Asterisk (*)
 Option2=2,Question mark (?)
 Option3=3,Exclamation mark (!)
+
+; ********** RA2/YR BEGINS + ARES ALTERATIONS ***********
+[GatherAtEnemy]
+Name=Gather at Enemy (Ares Improved)
+Description=Gather on a spot near enemy base at a distance in cells given by AISafeDistance + Number (+ve or -ve). Ares makes use of the unused Number parameter. If not using Ares for YR then set the parameter to 0.
+ParamType=Number
+ParamDescription=Distance Variable
+
+[GatherAtBase]
+Name=Gather at Base (Ares Improved)
+DescriptionGathers outside own base perimeter at a distance in cells given by AISafeDistance (Ares: AIFriendlyDistance) + Number (+ve or -ve). Ares makes use of the unused Number parameter. If not using Ares for YR then set the parameter to 0.
+ParamType=Number
+ParamDescription=Distance Variable
+
+[IronCurtain];55
+Name=Iron Curtain (Ares Improved)
+Description=Calls (and waits if nearly ready) for the House to deliver Iron Curtain of the specified superweapon group Number to team. Ares makes use of the unused Number parameter. If not using Ares for YR then set the parameter to 0.
+ParamType=Number; a superweapon selector would be useful.
+ParamDescription=SW.Group ID
+
+[ChronoSphereTeamBuildings]
+Name=ChronoSphere Team to Building
+Description=If the owner of the team has the Chronosphere fully charged then it will be used to move the team to the given structure number before moving on to next action. 
+ParamDescription=Building
+ParamType=BuildingWithProperty
+
+[ChronoSphereTeamTarget]
+Name=ChronoSphere Team to target Type
+Description=If the owner of the team has the Chronosphere fully charged then it will be used to transport the task force to the given target type. Exact target is either nearest/first built based on the value used in TargetDistanceCoefficientDefault or its technotype override of TargetDistanceCoefficient.
+ParamDescription=Target
+ParamType=Quarry
+Option0=0,N/A (Cancel)
+Option1=1,Anything
+Option2=2,Structures
+Option3=3,Harvesters
+Option4=4,Infantry
+Option5=5,Vehicles
+Option6=6,Factories
+Option7=7,Base Defenses
+Option8=8,Base Threats
+Option9=9,Power Plants
+Option10=10,Occupiables
+Option11=11,Tech Buildings
+
+[MoveToFriendlyStructure]
+Name=Move to Friendly Structure
+Description=16,0,1,Move to own structure or owned by allies given in the structure number parameter.
+ParamDescription=Building
+ParamType=BuildingWithProperty
+
+[AttackStructureAtWaypoint]
+Name=Attack structure at waypoint
+Description=Attacks the structure at given waypoint. Owner is not considered as of enemy or ally or neutral. An attack by Engineer would mean repairing the building. This action also uses the weapon if present of the unit instead its special abilities like C4. This is useful in cases like destroying an occupiable structure instead of entering it.
+ParamType=Waypoint
+ParamDescription=Waypoint ID
+
+[EnterGrinder]
+Name=Enter Grinder
+Description=Team will enter nearest grinder owned by the owner of this team or allies.
+
+[OccupyTankBunker]
+Name=Occupy Tank Bunker
+Description=Any vehicle members of this team which do not have Bunkerable=no set will enter the nearest vacant structure with Bunker=yes set if it is owned by the owner of the team or any of its allies.
+
+[EnterBioReactor]
+Name=Enter bio reactor
+Description=Any infantry members of this team will enter the nearest structure with InfantryAbsorb=yes set if it is owned by the owner of this team or any of its allies and has space available.
+
+[OccupyBattleBunker];63
+Name=Occupy Battle Bunker
+Description=Any infantry members of this team with Occupier=yes set will enter the nearest structure (which they own) with CanOccupyFire=yes set.
+
+[GarrisonStructure]
+Name=Garrison Structure
+Description=Any infantry members of this team with Occupier=yes set will enter the nearest (neutral) structure with CanOccupyFire=yes set. It is specifically used so as to transfer the unit's weapon to the structure.
+
+; ********** ARES ADDITIONS *********** Starts at 65
+[AuxPower]
+Name=[Ares] Auxiliary Power
+Description=Permanently changes the power output of the house owning the team by the specified amount. 
+ParamType=Number
+ParamDescription=Power Amount
+
+[KillDrivers]
+Name=[Ares] Kill Drivers
+Description=Kills all unprotected drivers of the units in this team and assigns them to the country called Special.
+
+[TakeVehicles]
+Name=[Ares] Take Vehicles
+Description=If possible, all infantry (CanDrive or VehicleThief) in this team will be assigned to the closest vehicle they can drive or hijack.
+
+[ConvertType]
+Name=[Ares] Convert Type
+Description=Changes all members of this team into their respective script conversion types defined by their respective Ares Convert.Script flag.
+
+[SonarReveal]
+Name=[Ares] Sonar Reveal
+Description=Disables the ability of all team members to cloak themselves for the given Duration (number of frames).
+ParamType=Number
+ParamDescription=Frame Duration
+
+[DisableWeapons]
+Name=[Ares] Disable Weapons
+Description=Disables the ability of all team members to fire for the given Duration (number of frames). Use 0 to end the effect.
+ParamType=Number
+ParamDescription=Frame Duration
+; ********** ARES ENDS ***********
